[package]
name = "kernal"
version = "0.3.0"
authors = [ "Florian Weinacker <florian1345@gmx.de>" ]
edition = "2021"
description = "A fluent assertion framework for Rust."
documentation = "https://docs.rs/kernal/latest/kernal/"
readme = "README.md"
repository = "https://github.com/florian1345/kernal"
license = "MIT OR Apache-2.0"
keywords = [ "assert", "assertion", "fluent", "test" ]
categories = [ "development-tools::testing" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5"
rstest = "0.24.0"
rstest_reuse = "0.7.0"
symlink = "0.1.0"
tempfile = "3.16.0"

[profile.bench]
opt-level = 3
lto = true

[[bench]]
name = "bench"
harness = false
